--- a/root/templates/base.html
+++ b/root/templates/base.html
@@ -147,5 +147,10 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
       <script src="..\static\js\sidebars.js"></script>
+
+  
+{% block content %}
+
+{% endblock content %}
   </body>
 </html>
