--- a/root/templates/signin.html
+++ b/root/templates/signin.html
@@ -32,15 +32,15 @@
   <body class="text-center bg-dark">
     
 <main class="form-signin">
-    <h1 class="h1 mb-3 fw-normal text-light">Drawing CMBD</h1>
+    <h1 class="h1 mb-3 fw-normal text-light">Drawing Config Manager</h1>
     <br>
   <form>
     <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal text-light">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" class="form-control" id="floatingInput" placeholder="Username">
+      <label for="floatingInput">Username</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -56,8 +56,6 @@
     <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
   </form>
 </main>
-
-
     
   </body>
 </html>
